tests/baselines/reference/constructorParametersInVariableDeclarations.errors.txt
==== tests/cases/compiler/constructorParametersInVariableDeclarations.ts (6 errors) ====
    class A {
        private a = x;
                    ~
!!! error TS2095: Could not find symbol 'x'.
        private b = { p: x };
                         ~
!!! error TS2095: Could not find symbol 'x'.
        private c = () => x;
                          ~
!!! error TS2095: Could not find symbol 'x'.
        constructor(x: number) {
        }
    }
    
    class B {
        private a = x;
                    ~
!!! error TS2095: Could not find symbol 'x'.
        private b = { p: x };
                         ~
!!! error TS2095: Could not find symbol 'x'.
        private c = () => x;
                          ~
!!! error TS2095: Could not find symbol 'x'.
        constructor() {
            var x = 1;
        }
    }